--- a/task2/src/main/resources/view_en_US.properties
+++ b/task2/src/main/resources/view_en_US.properties
@@ -1,5 +1,5 @@
 #Меню
-menu = Enter command from list:\n- create file\n- sort array (bubble sort)\n- sort array (shaker sort)\n- sort array (choice sort)\n- sort array (insertion sort)\n- sort array (insertion sort 0)\n- sort array (merge sort)\n- sort array (Shell's sort)\n- exit
+menu = Enter command from list:\n- create file\n- sort array (bubble sort)\n- sort array (shaker sort)\n- sort array (choice sort)\n- sort array (insertion sort)\n- sort array (insertion sort 0)\n- sort array (merge sort)\n- sort array (Shell's sort)\n- sum two matrixes\n- matrix subtraction\n- matrix production\n- exit
 #Команда на создание файла
 createFileCommandRequest = create file
 createFileCommandDataRequest = enter path to the file and quantity of values, divided by space
@@ -13,6 +13,11 @@ insertionSortCommandRequest = sort array (insertion sort)
 insertionSortBSCommandRequest = sort array (insertion sort 0)
 mergeSortCommandRequest = sort array (merge sort)
 shellSortCommandRequest = sort array (Shell's sort)
+matrixSumCommandRequest = sum two matrixes
+matrixSubtractCommandRequest = matrix subtraction
+matrixProductCommandRequest = matrix production
 #Общее
 pathRequest = enter path to the file
 wrongData = wrong data
+pathRequest2 = enter 2 paths to files through comma
+noSuchCommand = there is no such command
